syntax = "proto3";

import "google/protobuf/empty.proto";
package game;
option go_package = "github.com/khatibomar/dhangkanna/api/state_v1";

message Game {
  repeated string guessedCharacter = 1;
  repeated string incorrectGuesses = 2;
  int32 chancesLeft = 3;
  int32 gameState = 4;
  string message = 5;
  int32 version = 6;
}

service StateService {
  rpc Send (Game) returns (google.protobuf.Empty);
  rpc Receive (google.protobuf.Empty)  returns (Game);
}